# smiriti

./: .flutter-plugins  .gitignore  DEPLOYMENT.md  Dockerfile.build  README.md  SECURITY.md  SETUP_GUIDE.md  WEEK2_SUMMARY.md  WEEK3_4_SUMMARY.md  WEEK5_SUMMARY.md  WEEK6_7_SUMMARY.md  WEEK8_9_FINAL.md  gradle.properties  pubspec.yaml  verify_build.sh
.windsurf/workflows/: smriti.md
android/: build.gradle  gradle.properties
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
android/gradle/wrapper/: gradle-wrapper.properties
assets/: vocab.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  objectbox.g.dart
lib/core/animations/: app_animations.dart
lib/core/constants/: app_constants.dart
lib/core/di/: injection.dart
lib/core/error/: error_handler.dart
lib/core/services/: app_initializer.dart  audio_transcription_service.dart  embedding_service.dart  encryption_service.dart  error_handler.dart  http_client.dart  llm_service.dart  model_manager.dart  ocr_service.dart  remote_llm_service.dart  secure_storage_service.dart
lib/core/theme/: app_theme.dart
lib/data/: objectbox_store.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
(+46 files in other folders)
